--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-	"name": "Obsidian Shadowdark Reskin",
+	"name": "osr",
 	"version": "0.1",
 	"minAppVersion": "1.0.0",
 	"author": "Dominic Mauro",
